--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
 
   <header>
-    <h1><img src=images/dinos-r-us.svg" alt=Dinos 'R' Us"></h1>
+    <h1><img src="images/dinos-r-us.svg" alt="Dinos 'R' Us"></h1>
   </header>
 
   <main>
